--- a/src/pages/videochat/UserVideo.css
+++ b/src/pages/videochat/UserVideo.css
@@ -1,19 +1,27 @@
+/* .all {
+  background-color: black;
+} */
 video {
   /* width 변경 */
   width: 50%;
   height: auto;
   float: left;
   cursor: pointer;
+  border-radius: 10px;
+  margin: 10px;
 }
+
 .streamcomponent div {
   position: absolute;
-  background-color: black;
+  background-color: white;
   /* background: #f8f8f8; */
   padding-left: 5px;
   padding-right: 5px;
-  color: #777777;
+  color: black;
   font-weight: bold;
   border-bottom-right-radius: 4px;
+  border-radius: 10px;
+  margin: 10px;
 }
 p {
   /* margin 변경 */
